# Estudo_Docker

./: .GITIGNORE  justfile  pyproject.toml
src/dockeryt/: main.py  script.py
