[project]
name = "doceryt"
version = "0.0.1"
description = "Essa é uma maquina virtual com Docker"
requires-python = ">= 3.14"
readme = "README.md"
license = "MIT"
authors = [{name = "João Carlos dos Santos Correia"}]

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]
[project.optional-dependencies]
dev = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "watchdog>=6.0.0",
]
