[project]
name = "dockeryt"
version = "0.0.1"
description = "Essa é uma maquina virtual com Docker"
requires-python = ">= 3.14"
readme = "README.md"
license = "MIT"
authors = [{ name = "João Carlos dos Santos Correia" }]

dependencies = ["fastapi>=0.128.0", "uvicorn>=0.40.0"]
[project.optional-dependencies]
dev = []

[dependency-groups]
dev = ["pytest>=9.0.2", "watchdog>=6.0.0"]

[project.urls]
"Homepage" = "https://github.com/JCsvg/Estudo_Docker"
"Repository" = "https://github.com/JCsvg/Estudo_Docker"
"Documentation" = "https://github.com/JCsvg/Estudo_Docker"

[project.scripts]
dockeryt = "doceryt.script:run"

[tool.ruff]
line-length = 88
target-version = "py314"
fix = true
show-fixes = true
indent-width = 2
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "INP001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["dockeryt"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src", "tests"]
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]
reportMissingTypeStubs = true

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['./src/dockeryt']
